fixed alignment, updated accordion content

--- a/example/Accordion.css
+++ b/example/Accordion.css
@@ -2,6 +2,7 @@
   padding-left: 20px;
   position: relative;
   font-size: 12px;
+  user-select: none;
 }
 .accordion.main {
   padding-top: 5px;
