--- a/src/index.styl
+++ b/src/index.styl
@@ -4,6 +4,7 @@ color_grey = #D8D8D8
   padding-left 20px
   position relative
   font-size 12px
+  user-select none
   &.main
     padding-top 5px
     padding-bottom @padding-top
